ADDED SPAM PROTECTION

--- a/index.html
+++ b/index.html
@@ -225,6 +225,8 @@
 
         <textarea name="message" cols="30" rows="10" placeholder="Your Message" required></textarea>
 
+        <div class="h-captcha" data-captcha="true"></div>
+
         <input type="submit" value="Send Message" class="btn">
     </form>
 </section>
@@ -273,6 +275,7 @@
 
 
 
+<script src="https://web3forms.com/client/script.js" async defer></script>
 </body>
 
 <div class="blurred-background" id="blurredBackground">
