--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         
         Let's connect and explore potential collaborations as we navigate the dynamic field of technology together
       </p>
-      <a href= "https://drive.google.com/file/d/1dmjDgZfVCL5aqHDJVxFL7CfRUBRc4upr/view?usp=sharing" class="btn">Download My Resume</a>
+      <a href= "https://drive.google.com/file/d/1Dnh7dro3gFo2H2k_p4I1A0Xg8NyNcPdl/view?usp=drivesdk" class="btn">Download My Resume</a>t
     </div>
 
     <div class="about-img">
