--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         
         Let's connect and explore potential collaborations as we navigate the dynamic field of technology together
       </p>
-      <a href= "https://drive.google.com/file/d/17K7DY5Mon7eXPLYePO2vmVnBctdeAs-Y/view?usp=share_link" class="btn">Download My Resume</a>t
+      <a href= "https://drive.google.com/file/d/1H3S1Ys9umJHKqvh7gTD1EN7gewho-4lc/view?usp=sharing" class="btn">Download My Resume</a>t
     </div>
 
     <div class="about-img">
